[gd_scene load_steps=11 format=3 uid="uid://kxb5ba3rlqta"]

[ext_resource type="Texture2D" uid="uid://ik06pducnaan" path="res://src/main/assets/texture/Actor/Characters/Boy/SpriteSheet.png" id="1_aelj2"]
[ext_resource type="Script" path="res://src/main/scene/role/tower/tower.gd" id="1_ov7a3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j6uat"]
size = Vector2(12, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugwps"]
atlas = ExtResource("1_aelj2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4loi"]
atlas = ExtResource("1_aelj2")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_81mjq"]
atlas = ExtResource("1_aelj2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_067cg"]
atlas = ExtResource("1_aelj2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rfcb"]
atlas = ExtResource("1_aelj2")
region = Rect2(0, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_hopn7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugwps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4loi")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_81mjq")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_067cg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rfcb")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kcw82"]
radius = 80.0

[node name="Tower" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_ov7a3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["tower"]]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_j6uat")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hopn7")
animation = &"idle"
frame_progress = 0.922484

[node name="Area2DAttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DAttackRange"]
shape = SubResource("CircleShape2D_kcw82")

[node name="TimerFireInterval" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="Area2DAttackRange" to="." method="_on_area_2d_attack_range_area_entered"]
[connection signal="area_exited" from="Area2DAttackRange" to="." method="_on_area_2d_attack_range_area_exited"]
[connection signal="timeout" from="TimerFireInterval" to="." method="_on_timer_fire_interval_timeout"]
